Fix menu list margin top on mobile screen

--- a/css/style.css
+++ b/css/style.css
@@ -472,7 +472,7 @@ ul {
     align-items: flex-start;
     width: 100%;
     height: fit-content;
-    top: 80px;
+    top: 79px;
     bottom: 0;
     left: 0;
     right: 0;
